--- a/myself..css
+++ b/myself..css
@@ -261,7 +261,7 @@ input[type=text], select, textarea {
         padding-top: 20px;
         color: rgb(16, 18, 16);
         padding-left: 10px;
-        font-size: 30px;
+        font-size: 50px;
         
     
     }
@@ -336,7 +336,7 @@ input[type=text], select, textarea {
         border-radius: 60px;
         margin-top: 40px;
         padding-left: 30px;
-        font-size: 15px;
+        font-size: 40px;
         text-align: justify;
         color: hsl(0, 0%, 83%);
         display:inline-block;
@@ -354,8 +354,8 @@ input[type=text], select, textarea {
         font-size: 17px;
     }
     .image{
-        width: 40%;
-        height: 45%;
+        width: 100%;
+        height: 100%;
         padding-left: 160px;
         padding-top: 28px;
         height: 100vh;
@@ -429,6 +429,37 @@ input[type=text], select, textarea {
         padding-top: 10px;
         color: whitesmoke;
       }
+      .html,.cpp,.py,.cs,.tw{
+        text-align: center;
+        font-weight: bolder;
+        padding-top: 5px;
+        padding-bottom: 3px;
+        color: white;
+        border-radius: 20px;
+    }
+    .html{
+        width: 70%;
+        background-color: darkgreen;
+    }
+    .cpp{
+        width: 75%;
+        background-color: rgb(6, 180, 24);
+    }
+    .py{
+        width: 65%;
+        background-color: rgb(170, 193, 24);
+    }
+    .cs{
+        width: 75%;
+        background-color: rgb(193, 94, 24);
+    
+    }
+    .tw{
+        width: 80%;
+        background-color: rgb(102, 43, 180);
+    
+    }
+    
 }
 /* .myimg{
 
